config and component updates

--- a/package.json
+++ b/package.json
@@ -13,10 +13,20 @@
     "@supabase/auth-helpers-nextjs": "^0.4.1",
     "@supabase/auth-helpers-react": "^0.3.0",
     "@supabase/supabase-js": "^2.0.0",
+    "@emotion/css": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
+    "@headlessui/react": "^1.7.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.7",
     "classnames": "2.3.1",
-    "next": "^12.2.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "framer-motion": "^7.5.2",
+    "next": "12.3.1",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-merge-refs": "1.1.0",
     "stripe": "8.201.0",
     "swr": "1.2.0",
@@ -25,8 +35,12 @@
   "devDependencies": {
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
-    "autoprefixer": "^10.4.2",
-    "postcss": "8.4.5",
+    "@emotion/eslint-plugin": "^11.10.0",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
   },
