--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,14 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
 
 # editors
 .vscode
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
