--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=saas-starter"
+    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=comp-subscription-starter"
   },
   "dependencies": {
-    "@stripe/stripe-js": "1.22.0",
-    "@supabase/auth-helpers-nextjs": "^0.4.1",
-    "@supabase/auth-helpers-react": "^0.3.0",
-    "@supabase/supabase-js": "^2.0.0",
+    "@babel/core": "^7.19.6",
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.3",
+    "@stripe/stripe-js": "1.22.0",
+    "@supabase/auth-helpers-nextjs": "^0.4.1",
+    "@supabase/auth-helpers-react": "^0.3.0",
+    "@supabase/supabase-js": "^2.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "classnames": "2.3.1",
@@ -29,19 +30,18 @@
     "react-hook-form": "^7.36.1",
     "react-merge-refs": "1.1.0",
     "stripe": "8.201.0",
-    "swr": "1.2.0",
-    "tailwindcss": "3.0.18"
+    "swr": "1.2.0"
   },
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.10.0",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
-    "@emotion/eslint-plugin": "^11.10.0",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
     "prettier": "2.5.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.5.5"
   },
   "prettier": {
