--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
-    "react-hot-toast": "^2.4.0",
     "react-merge-refs": "1.1.0",
+    "react-toastify": "^9.1.1",
     "stripe": "8.201.0",
     "swr": "1.2.0"
   },
